--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,6 +26,9 @@ jobs:
         uses: ./
         with:
           egress-policy: audit
+      - name: Bootstrap
+        run: |
+          make bootstrap
       - name: Build the go agent
         working-directory: ./agent
         run: |
