fix: correct step name

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -198,7 +198,7 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
-    needs: [build, audit]
+    needs: [build, test-audit]
     outputs:
       release_created: ${{ steps.release.outputs.release_created }}
       tag_name: ${{ steps.release.outputs.tag_name }}
