--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
       - name: Install deps
-        run: sudo sapt-get install libnetfilter-queue-dev
+        run: sudo apt-get install libnetfilter-queue-dev
       - name: Build
         run: |
           make bootstrap
