--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -141,45 +141,45 @@ jobs:
   #         dig example.com
   #         dig www.wikipedia.org
 
-  docker:
-    needs: build
-    runs-on: ${{ matrix.os }}
-    strategy:
-      fail-fast: false
-      matrix:
-        # os: [ubuntu-22.04, ubuntu-24.04]
-        os: [ubuntu-22.04]
-    timeout-minutes: 2
+  # docker:
+  #   needs: build
+  #   runs-on: ${{ matrix.os }}
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       # os: [ubuntu-22.04, ubuntu-24.04]
+  #       os: [ubuntu-22.04]
+  #   timeout-minutes: 2
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-      - uses: actions/download-artifact@v4
-        with:
-          name: build-artifacts
-      - name: Enable egress filtering
-        uses: ./
-        with:
-          allowed-domains: |
-            production.cloudflare.docker.com
-            docker.io
-            *.docker.io
-            www.google.com
-          egress-policy: block
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #     - uses: actions/download-artifact@v4
+  #       with:
+  #         name: build-artifacts
+  #     - name: Enable egress filtering
+  #       uses: ./
+  #       with:
+  #         allowed-domains: |
+  #           production.cloudflare.docker.com
+  #           docker.io
+  #           *.docker.io
+  #           www.google.com
+  #         egress-policy: block
 
-      - name: Test curl calls within Docker
-        run: |
-          docker run --rm --entrypoint sh alpine/curl:8.7.1 -c "
-            if ! curl https://www.google.com --max-time 5 --output /dev/null; then
-              echo 'Expected curl to www.google.com to succeed, but it failed';
-              exit 1;
-            fi;
+  #     - name: Test curl calls within Docker
+  #       run: |
+  #         docker run --rm --entrypoint sh alpine/curl:8.7.1 -c "
+  #           if ! curl https://www.google.com --max-time 5 --output /dev/null; then
+  #             echo 'Expected curl to www.google.com to succeed, but it failed';
+  #             exit 1;
+  #           fi;
 
-            if curl https://www.bing.com --max-time 5 --output /dev/null; then
-              echo 'Expected curl to www.bing.com to fail, but it succeeded';
-              exit 1;
-            fi;
-          "
+  #           if curl https://www.bing.com --max-time 5 --output /dev/null; then
+  #             echo 'Expected curl to www.bing.com to fail, but it succeeded';
+  #             exit 1;
+  #           fi;
+  #         "
 
   release:
     runs-on: ubuntu-22.04
@@ -212,4 +212,18 @@ jobs:
         if: ${{ steps.release.outputs.release_created }}
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh release upload ${{ needs.release.outputs.tag_name }} agent/agent
+        run: gh release upload ${{ steps.release.outputs.tag_name }} agent/agent
+      - name: Tag major and minor versions for Github Action
+        if: ${{ steps.release.outputs.release_created }}
+        run: |
+          git config user.name github-actions[bot]
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+          git remote add gh-token "https://${{ secrets.GITHUB_TOKEN }}@github.com/fallard84/bullfrog.git"
+          git tag -d v${{ steps.release.outputs.major }} || true
+          git tag -d v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} || true
+          git push origin :v${{ steps.release.outputs.major }} || true
+          git push origin :v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} || true
+          git tag -a v${{ steps.release.outputs.major }} -m "Release v${{ steps.release.outputs.major }}"
+          git tag -a v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} -m "Release v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }}"
+          git push origin v${{ steps.release.outputs.major }}
+          git push origin v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }}
