--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -182,11 +182,15 @@ jobs:
   #         "
 
   release:
+    if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-22.04
     permissions:
       contents: write
       pull-requests: write
     needs: [build, check-dist-diff]
+    outputs:
+      release_created: ${{ steps.release.outputs.release_created }}
+      tag_name: ${{ steps.release.outputs.tag_name }}
     steps:
       # - name: Enable egress filtering
       #   uses: bullfrogsec/bullfrog@v0.3
@@ -213,6 +217,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: gh release upload ${{ steps.release.outputs.tag_name }} agent/agent
+        # Update major/minor tags for Github Action
+        # Ref: https://github.com/googleapis/release-please-action/tree/main?tab=readme-ov-file#creating-majorminor-tags
       - name: Tag major and minor versions for Github Action
         if: ${{ steps.release.outputs.release_created }}
         run: |
@@ -227,3 +233,33 @@ jobs:
           git tag -a v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} -m "Release v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }}"
           git push origin v${{ steps.release.outputs.major }}
           git push origin v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }}
+
+  validate-action-in-another-workflow:
+    needs: release
+    if: ${{ needs.release.outputs.release_created }}
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-22.04, ubuntu-24.04]
+    timeout-minutes: 2
+
+    steps:
+      # This job intentionally skips `actions/checkout` to simulate bullfrog's action as if it were called from another workflow. Refer to https://github.com/bullfrogsec/bullfrog/commit/3a3e5e03112ef726b3079d402415760c9021fa39 for details.
+
+      - uses: jenseng/dynamic-uses@02f544690a931f3967153cd5f14679cfeb61f830
+        with:
+          uses: ${{ github.action_repository }}@${{ needs.release.outputs.tag_name }}
+          with: '{"allowed-domains": "www.google.com", "egress-policy": "block"}'
+
+      - name: Make HTTP requests
+        run: |
+          if ! curl https://www.google.com --output /dev/null; then
+            echo 'Expected curl to www.google.com to succeed, but it failed';
+            exit 1;
+          fi;
+
+          if curl https://www.bing.com --max-time 5 --output /dev/null; then
+            echo 'Expected curl to www.bing.com to fail, but it succeeded';
+            exit 1;
+          fi;
