--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -16,6 +16,8 @@ jobs:
       contents: read
 
     steps:
+      - name: dump context
+        run: echo "${{ toJson(github) }}"
       - name: Enable egress filtering
         uses: bullfrogsec/bullfrog@v0
         with:
@@ -63,21 +65,6 @@ jobs:
       - name: Check if dist has changed for the action/dist folder
         run: |
           git diff --exit-code --quiet action/dist || (echo "action/dist has changed, please commit the changes" && exit 1)
-
-  test-load-agent:
-    needs: build
-    runs-on: ubuntu-22.04
-    timeout-minutes: 2
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
-      - uses: actions/download-artifact@65a9edc5881444af0b9093a5e628f2fe47ea3b2e
-        with:
-          name: build-artifacts
-
-      - name: Enable egress filtering
-        uses: ./
 
   test-audit:
     needs: build
@@ -290,7 +277,7 @@ jobs:
 
       - uses: jenseng/dynamic-uses@02f544690a931f3967153cd5f14679cfeb61f830
         with:
-          uses: bullfrogsec/bullfrog@${{ needs.release.outputs.tag_name }}
+          uses: ${{ github.repository }}@${{ needs.release.outputs.tag_name }}
           with: '{"allowed-domains": "www.google.com", "egress-policy": "block"}'
 
       - name: Make HTTP requests
