--- a/action.yml
+++ b/action.yml
@@ -21,6 +21,10 @@ inputs:
     description: "Path to a local agent binary to use instead of fetching it from Github. This is useful for testing changes to the agent without releasing it. The path is relative to the root action directory (where this action.yml is located)."
     type: string
     default: ""
+  agent-download-base-url:
+    description: "Base URL for fetching the agent binary. This is useful for testing changes in a fork. The URL should end with a slash."
+    type: string
+    default: "https://github.com/bullfrogsec/bullfrog/releases/download/"
 
 runs:
   using: "node20"
