--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -201,7 +201,7 @@ jobs:
       - name: Nginx with port forwarding
         run: source test/docker_nginx_port_forwarding.sh
 
-  release:
+  pre-release:
     if: github.ref == 'refs/heads/main'
     runs-on: ubuntu-22.04
     permissions:
@@ -247,26 +247,10 @@ jobs:
           echo "Upload"
           tar -czf agent.tar.gz agent/agent
           gh release upload ${{ steps.release.outputs.tag_name }} agent.tar.gz
-        # Update major/minor tags for Github Action
-        # Ref: https://github.com/googleapis/release-please-action/tree/main?tab=readme-ov-file#creating-majorminor-tags
-      # - name: Tag major and minor versions for Github Action
-      #   if: ${{ steps.release.outputs.release_created }}
-      #   run: |
-      #     git config user.name github-actions[bot]
-      #     git config user.email 41898282+github-actions[bot]@users.noreply.github.com
-      #     git remote add gh-token "https://${{ secrets.GITHUB_TOKEN }}@github.com/fallard84/bullfrog.git"
-      #     git tag -d v${{ steps.release.outputs.major }} || true
-      #     git tag -d v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} || true
-      #     git push origin :v${{ steps.release.outputs.major }} || true
-      #     git push origin :v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} || true
-      #     git tag -a v${{ steps.release.outputs.major }} -m "Release v${{ steps.release.outputs.major }}"
-      #     git tag -a v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }} -m "Release v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }}"
-      #     git push origin v${{ steps.release.outputs.major }}
-      #     git push origin v${{ steps.release.outputs.major }}.${{ steps.release.outputs.minor }}
 
-  validate-action-in-another-workflow:
-    needs: release
-    if: ${{ needs.release.outputs.release_created }}
+  pre-release-validation:
+    needs: pre-release
+    if: ${{ needs.pre-release.outputs.release_created }}
     runs-on: ubuntu-22.04
     timeout-minutes: 2
 
@@ -275,7 +259,7 @@ jobs:
       # small fix
       - uses: jenseng/dynamic-uses@02f544690a931f3967153cd5f14679cfeb61f830
         with:
-          uses: ${{ github.repository }}@${{ needs.release.outputs.tag_name }}
+          uses: ${{ github.repository }}@${{ needs.pre-release.outputs.tag_name }}
           with: '{"allowed-domains": "www.google.com", "egress-policy": "block", "agent-download-base-url": "https://github.com/${{ github.repository }}/releases/download/"}'
 
       - name: Make HTTP requests
@@ -290,4 +274,29 @@ jobs:
             exit 1;
           fi;
 
-  # publish release, then update tags, after validation pass
+  release:
+    runs-on: ubuntu-22.04
+    permissions:
+      contents: write
+    needs: [pre-release, pre-release-validation]
+    steps:
+      - name: Enable egress filtering
+        uses: bullfrogsec/bullfrog@v0
+        with:
+          # TODO: set to block once we confirm the domains required for the release process
+          egress-policy: audit
+      - name: Promote to a release
+        run: gh release edit ${{ needs.pre-release.outputs.tag_name }} --prerelease=false
+      - name: Tag major and minor versions for Github Action
+        run: |
+          git config user.name github-actions[bot]
+          git config user.email 41898282+github-actions[bot]@users.noreply.github.com
+          git remote add gh-token "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git"
+          git tag -d v${{ needs.pre-release.outputs.major }} || true
+          git tag -d v${{ needs.pre-release.outputs.major }}.${{ needs.pre-release.outputs.minor }} || true
+          git push origin :v${{ needs.pre-release.outputs.major }} || true
+          git push origin :v${{ needs.pre-release.outputs.major }}.${{ needs.pre-release.outputs.minor }} || true
+          git tag -a v${{ needs.pre-release.outputs.major }} -m "Release v${{ needs.pre-release.outputs.major }}"
+          git tag -a v${{ needs.pre-release.outputs.major }}.${{ needs.pre-release.outputs.minor }} -m "Release v${{ needs.pre-release.outputs.major }}.${{ needs.pre-release.outputs.minor }}"
+          git push origin v${{ needs.pre-release.outputs.major }}
+          git push origin v${{ needs.pre-release.outputs.
