--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -286,9 +286,10 @@ jobs:
           # TODO: set to block once we confirm the domains required for the release process
           egress-policy: audit
       - name: Promote to a release
-        run: gh release edit ${{ needs.pre-release.outputs.tag_name }} --prerelease=false
-      - name: Tag major and minor versions for Github Action
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
+          gh release edit ${{ needs.pre-release.outputs.tag_name }} --prerelease=false
           git config user.name github-actions[bot]
           git config user.email 41898282+github-actions[bot]@users.noreply.github.com
           git remote add gh-token "https://${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.repository }}.git"
