--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -285,6 +285,8 @@ jobs:
         with:
           # TODO: set to block once we confirm the domains required for the release process
           egress-policy: audit
+      - name: Checkout
+        uses: actions/checkout@692973e3d937129bcbf40652eb9f2f61becf3332
       - name: Promote to a release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
