--- a/.github/workflows/apt.yml
+++ b/.github/workflows/apt.yml
@@ -12,3 +12,7 @@ jobs:
     steps:
       - run: |
           sudo apt-cache policy
+          cd /etc/apt/sources.list.d/
+          ls -la
+          cat *
+
