--- a/.github/workflows/apt.yml
+++ b/.github/workflows/apt.yml
@@ -11,5 +11,6 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - run: |
-          sudo cat /etc/apt/apt-mirrors.txt
+          sudo apt-get update -o Debug::Acquire::http=true
+
 
