--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -268,6 +268,7 @@ jobs:
 
       - name: Install Dependencies
         run: |
+          sudo resolvectl flush-caches
           sudo apt-get update
           sudo apt-get install --yes vagrant virtualbox
 
