--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -378,7 +378,7 @@ jobs:
       - uses: jenseng/dynamic-uses@02f544690a931f3967153cd5f14679cfeb61f830
         with:
           uses: ${{ github.repository }}@${{ needs.pre-release.outputs.tag_name }}
-          with: '{"allowed-domains": "www.google.com", "egress-policy": "block", "agent-download-base-url": "https://github.com/${{ github.repository }}/releases/download/"}'
+          with: '{"allowed-domains": "www.google.com", "egress-policy": "block", "_agent-download-base-url": "https://github.com/${{ github.repository }}/releases/download/"}'
 
       - name: Make HTTP requests
         run: |
