--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -19,9 +19,10 @@ jobs:
       diff: ${{ steps.changes.outputs.src }}
     steps:
       - name: Enable egress filtering
-        uses: bullfrogsec/bullfrog@1472c28724ef13ea0adc54d0a42c2853d42786b1
+        uses: fallard84/bullfrog@0bfa75d3baba0f027e405a9984db637d0ae53ffa
         with:
           egress-policy: audit
+          _agent-download-base-url: "https://github.com/${{ github.repository }}/releases/download/"
       - name: Checkout
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
       - uses: fallard84/paths-filter@dfb4213208eb30382ee3e27b8a810fc3fb8cc911 # v3.0.3
@@ -40,9 +41,10 @@ jobs:
     if: ${{ needs.check-diff.outputs.diff == 'true' }}
     steps:
       - name: Enable egress filtering
-        uses: bullfrogsec/bullfrog@1472c28724ef13ea0adc54d0a42c2853d42786b1
+        uses: fallard84/bullfrog@0bfa75d3baba0f027e405a9984db637d0ae53ffa
         with:
           egress-policy: block
+          _agent-download-base-url: "https://github.com/${{ github.repository }}/releases/download/"
           allowed-domains: |
             *.blob.core.windows.net
             *.docker.io
@@ -79,9 +81,10 @@ jobs:
 
     steps:
       - name: Enable egress filtering
-        uses: bullfrogsec/bullfrog@1472c28724ef13ea0adc54d0a42c2853d42786b1
+        uses: fallard84/bullfrog@0bfa75d3baba0f027e405a9984db637d0ae53ffa
         with:
           egress-policy: block
+          _agent-download-base-url: "https://github.com/${{ github.repository }}/releases/download/"
           allowed-domains: |
             *.github.com
 
@@ -243,9 +246,10 @@ jobs:
 
     steps:
       - name: Enable egress filtering
-        uses: bullfrogsec/bullfrog@1472c28724ef13ea0adc54d0a42c2853d42786b1
+        uses: fallard84/bullfrog@0bfa75d3baba0f027e405a9984db637d0ae53ffa
         with:
           egress-policy: block
+          _agent-download-base-url: "https://github.com/${{ github.repository }}/releases/download/"
           allowed-domains: |
             *.canonical.com
             *.github.com
@@ -289,9 +293,10 @@ jobs:
 
     steps:
       - name: Enable egress filtering
-        uses: bullfrogsec/bullfrog@1472c28724ef13ea0adc54d0a42c2853d42786b1
+        uses: fallard84/bullfrog@0bfa75d3baba0f027e405a9984db637d0ae53ffa
         with:
           egress-policy: block
+          _agent-download-base-url: "https://github.com/${{ github.repository }}/releases/download/"
           allowed-domains: |
             *.golang.org
             registry.npmjs.org
@@ -336,10 +341,11 @@ jobs:
       minor: ${{ steps.release.outputs.minor }}
     steps:
       - name: Enable egress filtering
-        uses: bullfrogsec/bullfrog@1472c28724ef13ea0adc54d0a42c2853d42786b1
+        uses: fallard84/bullfrog@0bfa75d3baba0f027e405a9984db637d0ae53ffa
 
         with:
           egress-policy: block
+          _agent-download-base-url: "https://github.com/${{ github.repository }}/releases/download/"
           allowed-domains: |
             uploads.github.com
 
@@ -399,9 +405,10 @@ jobs:
     needs: [pre-release, pre-release-validation]
     steps:
       - name: Enable egress filtering
-        uses: bullfrogsec/bullfrog@1472c28724ef13ea0adc54d0a42c2853d42786b1
+        uses: fallard84/bullfrog@0bfa75d3baba0f027e405a9984db637d0ae53ffa
         with:
           egress-policy: block
+          _agent-download-base-url: "https://github.com/${{ github.repository }}/releases/download/"
 
       - name: Checkout
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
