--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -2,12 +2,6 @@ name: Build, test and release
 
 on:
   push:
-    branches:
-      - main
-
-  pull_request:
-    branches:
-      - main
 
 permissions:
   contents: read
@@ -21,8 +15,10 @@ jobs:
       - name: Enable egress filtering
         uses: fallard84/bullfrog@0bfa75d3baba0f027e405a9984db637d0ae53ffa
         with:
-          egress-policy: audit
+          egress-policy: block
           _agent-download-base-url: "https://github.com/${{ github.repository }}/releases/download/"
+          allowed-domains: |
+            github.com
       - name: Checkout
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
       - uses: fallard84/paths-filter@dfb4213208eb30382ee3e27b8a810fc3fb8cc911 # v3.0.3
@@ -44,6 +40,7 @@ jobs:
         uses: fallard84/bullfrog@0bfa75d3baba0f027e405a9984db637d0ae53ffa
         with:
           egress-policy: block
+          dns-policy: any
           _agent-download-base-url: "https://github.com/${{ github.repository }}/releases/download/"
           allowed-domains: |
             *.blob.core.windows.net
@@ -54,6 +51,8 @@ jobs:
             production.cloudflare.docker.com
             registry.npmjs.org
             storage.googleapis.com
+            github.com
+
 
       - name: Checkout
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
@@ -296,11 +295,13 @@ jobs:
         uses: fallard84/bullfrog@0bfa75d3baba0f027e405a9984db637d0ae53ffa
         with:
           egress-policy: block
+          dns-policy: any
           _agent-download-base-url: "https://github.com/${{ github.repository }}/releases/download/"
           allowed-domains: |
             *.golang.org
             registry.npmjs.org
             storage.googleapis.com
+            github.com
 
       - name: Checkout
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
