--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -52,6 +52,7 @@ jobs:
             registry.npmjs.org
             storage.googleapis.com
             github.com
+            results-receiver.actions.githubusercontent.com
 
 
       - name: Checkout
@@ -83,9 +84,11 @@ jobs:
         uses: fallard84/bullfrog@0bfa75d3baba0f027e405a9984db637d0ae53ffa
         with:
           egress-policy: block
+          dns-policy: any
           _agent-download-base-url: "https://github.com/${{ github.repository }}/releases/download/"
           allowed-domains: |
-            *.github.com
+            github.com
+            results-receiver.actions.githubusercontent.com
 
       - name: Checkout
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
