--- a/.github/workflows/bullfrog.yml
+++ b/.github/workflows/bullfrog.yml
@@ -20,6 +20,7 @@ jobs:
           _agent-download-base-url: "https://github.com/${{ github.repository }}/releases/download/"
           allowed-domains: |
             github.com
+            *.actions.githubusercontent.com
       - name: Checkout
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
       - uses: fallard84/paths-filter@dfb4213208eb30382ee3e27b8a810fc3fb8cc911 # v3.0.3
@@ -53,7 +54,7 @@ jobs:
             registry.npmjs.org
             storage.googleapis.com
             github.com
-            results-receiver.actions.githubusercontent.com
+            *.actions.githubusercontent.com
 
 
       - name: Checkout
@@ -89,7 +90,7 @@ jobs:
           _agent-download-base-url: "https://github.com/${{ github.repository }}/releases/download/"
           allowed-domains: |
             github.com
-            results-receiver.actions.githubusercontent.com
+            *.actions.githubusercontent.com
 
       - name: Checkout
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
@@ -255,6 +256,7 @@ jobs:
           _agent-download-base-url: "https://github.com/${{ github.repository }}/releases/download/"
           allowed-domains: |
             *.canonical.com
+            github.com
             *.github.com
             *.ubuntu.com
             archivist.vagrantup.com
@@ -268,6 +270,7 @@ jobs:
             vagrantcloud.com
             www.google.com
             *.hashicorp.com
+            *.actions.githubusercontent.com
 
       - name: Checkout
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
@@ -306,6 +309,7 @@ jobs:
             registry.npmjs.org
             storage.googleapis.com
             github.com
+            *.actions.githubusercontent.com
 
       - name: Checkout
         uses: actions/checkout@d632683dd7b4114ad314bca15554477dd762a938 # v4.2.0
