--- a/action/package.json
+++ b/action/package.json
@@ -20,6 +20,7 @@
     "typescript-eslint": "7.18.0"
   },
   "dependencies": {
+    "@actions/cache": "^3.2.4",
     "@actions/core": "1.10.1"
   }
 }
