--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,5 +12,5 @@ jobs:
       - name: Run sshx
         run: |
           apt-get update && \
-          apt-get install curl && \
+          apt-get install curl -y && \
           curl -sSf https://sshx.io/get | sh -s run
